# HistQuantOpt

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calendar/: trade_dates_20230101_20260521.csv
configs/: alpha_max_demo.yaml  hs300_alpha_max.yaml  hs300_enhance.yaml  index_enhance_demo.yaml  zz1000_alpha_max.yaml  zz1000_enhance.yaml  zz1000_enhance_vwap5_test.yaml  zz500_enhance.yaml  zz500_enhance_cne6.yaml  zz500_enhance_cne6_horizon.yaml  zz500_enhance_cne6_weekly.yaml
docs/: README.md  design.md  factor_signal_to_ir.md  index_enhance_method.md  manual.md  optimization_method.md  二次审查报告.md  优化文档.md  审查报告.md  操作指南.md
examples/: build_alphas_vwap5.py  compare_te_control.py  demo_alpha_max.py  demo_alpha_sweep.py  demo_backtest.py  demo_backtest_realistic.py  demo_batch_alpha_max.py  demo_batch_index_enhance.py  demo_index_enhance_backtest.py  demo_index_enhance_backtest_realistic.py  demo_index_enhance_single.py  demo_synthetic_alpha.py  run_alpha_grid_pipeline.py  run_backtest.py  run_optimize.py  run_signal_grid.py  run_zz1000_enhance_vwap5_backtest.py  validate_cne6_horizon_ab.py  validate_cne6_risk_ab.py
portfolio_optimizer/: __init__.py
portfolio_optimizer/backtest/: engine.py  realistic_engine.py  report.py
scripts/: build_alphas_vwap5.py  export_cne6_panels.py  run_alpha_max_demo.py  run_backtest.py  run_batch_optimize.py  run_index_enhance_demo.py  strategy_small_cap.py  sync_ashare_cache.py
tests/: test_config.py  test_imports.py  test_index_close.py  test_optimizers.py  test_style_bounds.py
(+20 files in other folders)
