[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histquant"
version = "0.1.0"
description = "A-share multi-factor portfolio optimization framework"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
opt = [
    "cvxpy>=1.4",        # 凸优化
    "clarabel>=0.7",     # CLARABEL solver
]
dev = [
    "pytest>=8.0",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
